Fixed z-index issues + included styles.css for google font import

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,7 +2,7 @@
     top: 0;
     width: 100%;
     min-width: 100%;
-    z-index: 10;
+    z-index: 20;
     position: fixed;
 }
 
