--- a/src/app/user/sidebar-games/sidebar-games.component.css
+++ b/src/app/user/sidebar-games/sidebar-games.component.css
@@ -9,7 +9,7 @@
     overflow-x: hidden;
     box-shadow: 3px 0px 17px 0px #202021;
     font-size: 0.9em;
-    z-index: 15;
+    z-index: 30;
 } 
 
 .sidebar-inner {
@@ -25,7 +25,7 @@
     width: 100%;
     height: 100%;
     background-color: black; 
-    z-index: 14;
+    z-index: 25;
 }
 
  .list-item {
