--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
 html,body {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
     max-width: 100%;
     min-height: 100%;
@@ -33,7 +35,7 @@ hr {
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.content-container.hover:hover {
+.content-container.hover:hover, .content-container.hover:active, .content-container.hover:focus {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
